<resources>
    <string name="app_name" translatable="false">Monitor Growth</string>
    <string name="app_name_style" translatable="false">Child <![CDATA[<b><font color=#E4730E>Growth </font></b><b><font color=#CC6246>Monitor</font></b>]]> </string>
    <string name="monitor_title">Child Growth Monitor</string>

    <!--    ******************* Application ******************* -->
    <string name="anthropometric_calculator">Anthropometric Calculator</string>
    <string name="individual_assestment">Individual Assessment</string>
    <string name="nutritional_survey">Nutritional Survey</string>
    <string name="search_child">Search Child:</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="percentile">Percentile</string>
    <string name="optional_value_percentile">Optional value</string>
    <string name="z_score">Z Score</string>
    <string name="weight_for_age">Weight for age</string>
    <string name="height_for_age">Height for age</string>
    <string name="BMI_for_age">BMI for age</string>
    <string name="show_graphic">Show Graphics</string>


    <!--    ******************* Drawer Menu ******************* -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="adding_child">Adding Child</string>
    <string name="adding_parent">Adding %s</string>
    <string name="backup">Backup</string>


    <!--    ******************* Child******************* -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="fatherName">Father Name</string>
    <string name="motherName">Mother Name</string>
    <string name="address">Address</string>
    <string name="how_many_visits">Visits: %d.</string>
    <string name="apt">Apt.</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="additionalNotes">Additional Notes</string>


    <!--    ******************* Anthropometric Calculator******************* -->
    <string name="date_visit">Date of Visit</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_birth">Date of Birth</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm) </string>
    <string name="measured">Measured</string>
    <string name="recumbent">Recumbent</string>
    <string name="standing">Standing</string>
    <string name="oedema">Oedema</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="results">Results</string>
    <string name="for_age">for Age</string>
    <string name="bmi" translatable="false">BMI %.2f</string>
    <string name="show_date">%d/%d/%d</string>
    <string name="show_age">Age: %d years %d months (%d months)</string>
    <string name="date_of_birth_not_valid">Date of Birth not valid.</string>


    <!--    ******************* Error Messages******************* -->
    <string name="error_number">Error #%d. </string>
    <string name="error_empty_field">The %s can not be empty.</string>
    <string name="error_repeated_full_name">This full name is already in the application.</string>
    <!--    <string name="error_in_database">Error # %d.\nSomething went wrong doing the operation data.</string>-->
    <string name="error_saving_data">Could Not save data.</string>
    <string name="error_updating_data">Could not update data.</string>
    <string name="error_select_option">You must select an option.</string>
    <string name="error_child_information">Error saving child information.</string>
    <string name="error_creating_parent">Error creating parent.</string>
    <string name="error_zero_parents">Error, You have not selected any parent.</string>
    <string name="error_weight_out_of_limits">The Weight must be between 0.9(kg) and 275(kg).</string>
    <string name="error_height_out_of_limits">The Height must be between 38(cms) and 230(cms).</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
