<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_add_child"
            android:title="@string/adding_child" />

    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_backup"
                    android:title="@string/backup" />
            </menu>
        </item>
    </group>

</menu>
