<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:theme="@style/AppTheme">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/weight" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight_person"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weight"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/height" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/height_person"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/weight_person"
        app:layout_constraintStart_toStartOf="@+id/weight_person"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weight_person"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/bmi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/measured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="24dp"
        android:text="@string/measured"
        app:layout_constraintEnd_toEndOf="@+id/group_measured"
        app:layout_constraintEnd_toStartOf="@+id/oedema"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_person"
        tools:text="@string/measured" />

    <RadioGroup
        android:id="@+id/group_measured"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/measured"
        app:layout_constraintStart_toStartOf="@+id/measured"
        app:layout_constraintTop_toBottomOf="@+id/measured">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_standing"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:buttonTint="@color/text_color"
            android:checked="true"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/standing" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_recumbent"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:buttonTint="@color/text_color"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/recumbent" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/oedema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/oedema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/measured"
        app:layout_constraintStart_toStartOf="@+id/height_person"
        app:layout_constraintTop_toTopOf="@+id/measured"
        tools:text="@string/oedema" />

    <RadioGroup
        android:id="@+id/group_oedema"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oedema"
        app:layout_constraintStart_toStartOf="@+id/oedema"
        app:layout_constraintTop_toBottomOf="@+id/oedema">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_oedema_no"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:buttonTint="@color/text_color"
            android:checked="true"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/no" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_oedema_yes"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:buttonTint="@color/text_color"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/yes" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>